[project]
name = "search_agent"
version = "0.1.0"
description = "Basic python agentic AI project for creating text document for the given topic using wikipedia and other sources"
authors = [
    { name="Kiran", email="kiran.kumar035@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
  "requests==2.32.5"
]
